src/pages/ForgotPassword/ForgotPassword.scss
.forgotPwd-container {
    margin-left: 21.667%;
    margin-right: 21.667%;
    margin-top: 15%;
    padding-left: 13.542%;
    padding-right: 13.542%;
    padding-top: 6.615%;
    padding-bottom: 8.542%;
    background-color: #ffffff;
    font-family: 'Lato';
    font-size: 1.5rem, !important;
    border-radius: 10px !important;
}

.forgotPwd-form-control {
  box-shadow: 0px 12px 6px #DBDBDB;
  margin-bottom: 6.162%;
}

.forgotPwd-btn {
    //width: 18.385vw;
    border-radius: 40px !important;
    background-color: #4d96cc !important;
}

.forgotPwd-options-container{
    margin-top: 8.979%;
    text-align: center;
    
}

.formbox {  
    background-color:white;
    border-radius: .5em;
  //  padding: 10px;
    display: flex;
    height: 100%;
    width: 100%;
    justify-content: center;
    align-items: center;
  }
  
//   .item {
//     justify-content: center;
//     width: 100%;
//     background-color: white;
//   }

